# spaceX-demo

./: .gitignore  README.md  VERCEL_DEPLOY.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
anchor/: Anchor.toml  README.md
anchor/programs/space-travelers/: Cargo.toml
anchor/programs/space-travelers/src/: lib.rs
anchor/scripts/: initialize.ts
src/: App.css  App.tsx  index.css  main.tsx
src/components/: ColorfulStars.tsx  LaunchEffects.tsx  Nebula.tsx  PaymentPanel.css  PaymentPanel.tsx  SpaceScene.tsx  SpaceXRocket.tsx  StarfieldBackground.css  StarfieldBackground.tsx  SuccessMessage.css  SuccessMessage.tsx  TravelersList.css  TravelersList.tsx  WalletConnect.css  WalletConnect.tsx
src/config/: solana.ts
src/idl/: space_travelers.json
src/store/: useStore.ts
src/types/: index.ts
src/utils/: program.ts
