[package]
name = "space-travelers"
version = "0.1.0"
description = "SpaceX Space Travelers Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "space_travelers"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
